@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9975-4
-Date: 2006-10-12
+Version: 0.9975-5
+Date: 2006-10-..
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
