@@ -1,3 +1,8 @@
+2006-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/diagMatrix.R (%*%): rep(*, each = .) in Matrix %*% diagonal.
+	* tests/matprod.R: add tests for the bug fixed.
+
 2006-10-11  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/HBMM.[ch]: remove HarwellBoeing format for writing.
